tests/paczka1/small_fuzzy/21197631.err
Error in line 3: TepDhq A952 78,7
Error in line 8: TepDhq A842 11,4
